# example-llm-agent

./: README.md  example_output.json  pyproject.toml
app/: main.py  routes.py  settings.py
app/agents/product_owner/: insight_agent.py  routes.py
data/: 1.txt  2.txt  3.txt
