[project]
name = "llm-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.4.2",
    "duckduckgo-search>=8.0.1",
    "fastapi[standard]>=0.115.12",
    "lxml-html-clean>=0.4.2",
    "newspaper4k>=0.9.3.1",
    "openai>=1.76.2",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
]
